completo index-tienda-actividades

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="carta-cuerpo">
                     <h3 >Buffet busca encargado..</h3>
                     <p >A partir del mes de DICIEMBRE (12), presentanos tu licitación. Requisitos para poder obtener tus planillas de gast..</p>
-                    <a href="#" class="carta-link">Leer más</a>
+                    <a href="#" class="carta-link">Leer más...</a>
                 </div>
             </div>
             <div class="carta">
@@ -102,7 +102,7 @@
                 <div class="carta-cuerpo">
                     <h3 >Posiciones futbol Liga Mercedina </h3>
                     <p >Asi estan las posiciones del primer equipo del club frente a las dos derrotas consecutivas...</p>
-                    <a href="#" class="carta-link">Leer más</a>
+                    <a href="#" class="carta-link">Leer más...</a>
                 </div>
             </div>
             <div class="carta">
@@ -110,7 +110,7 @@
                 <div class="carta-cuerpo">
                     <h3 >Tras lograr el campeonato la comision directiva</h3>
                     <p >Este martes 23/09 hubo junta de los organismos del club, donde recalcaron la importancia de competir a un alto nivel co....</p>
-                    <a href="#" class="carta-link">Leer más</a>
+                    <a href="#" class="carta-link">Leer más...</a>
                 </div>
             </div>
         </section>
@@ -123,7 +123,7 @@
                     <p >El conjunto al mando de German Stopiello, lograron quedarse con el ascenso de la liga mercedina. Este fue el equipo campeon: (1) Rubio- (2)Garcia- (3) Medina- (4) Vivas- (5) MacGaulley- (6) Olase- (7) Rios- (8) Zalazar- (9) Scheffer- (10) Crosetti- (11)Martinez
                     <span>SUPLENTES:</span>(12) Maydu- (13) Abaca- (14) Cordoba- (15) Aubain- (16) Alvarez- (17) Quiroga- (18) Cejas-. A su vez estamos a la expectativa de la decision del pilar de este logro..... 
                     </p>
-                    <a href="#" class="carta-link">Leer más</a>
+                    <a href="#" class="carta-link">Leer más...</a>
                 </div>
             </div>
             <div class="carta">
@@ -133,7 +133,7 @@
                     <p >Correr en clima frío requiere de ropa cómoda y de alta tecnología.
                         Presentamos el rompevientos de running con capucha Run Icons 3 Tiras: la opción ideal para esas mañanas frías en las que preferís quedarte en cama....
                     </p>
-                    <a href="#" class="carta-link">Leer más</a>
+                    <a href="#" class="carta-link">Leer más...</a>
                 </div>
             </div>
              <div class="carta">
@@ -141,7 +141,7 @@
                 <div class="carta-cuerpo">
                     <h3 >Aumento en la tarifa</h3>
                     <p >Minimo aumento en la tarifa social de la institucion, enterate los nuevos benficios y promos familiares</p>
-                    <a href="#" class="carta-link">Leer más</a>
+                    <a href="#" class="carta-link">Leer más...</a>
                 </div>
             </div>
         </section>   
