--- a/pages/actividades.html
+++ b/pages/actividades.html
@@ -48,7 +48,90 @@
        
     </header>
     <main>
-        
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img-web/iconos-web/costanzo-portada.jpg" class="d-block w-100" alt="sponsor costanzo">
+          </div>
+          <div class="carousel-item">
+            <img src="../img-web/iconos-web/nikeanuncio.png" class="d-block w-100" alt="nike sponsor">
+          </div>
+          <div class="carousel-item">
+            <img src="../img-web/iconos-web/info-logo.jpg" class="d-block w-100" alt="giles ciudad">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+      <section id="actividades">
+        <h2>Actividades</h2>
+        <div class="actividad">
+            <h3>Escuela de futbol</h3>
+            <img src="../img-web/niños-team.jpg" alt="imagen nenes">
+            <p>La escuelita de futbol, al mando del CT, Santiago Crosetti (DT)/ Ulises Lucena (AC). Embarcada por niños de 3-5 años de edad.. con la finalidad de que los pequeños, adapten los valores a la competencia sin perder el motivo de sonrisa</p>
+            <button class="mas-informacion-act">Más información...</button>
+        </div>
+        <div class="actividad">
+            <h3>Inferiores</h3>
+            <img src="../img-web/niños-team.jpg" alt="imagen nenes">
+            <p>El semillero: "El objetivo es estar cerca de Boca y River y pelear con Lanús y Vélez el tercer lugar de las mejores inferiores de Argentina", le expresó a Olé el vicepresidente segundo del Bicho, Javier Pederzoli, ya que tienen que competir con una gran diferencia de dinero destinado a la captación de juveniles con respecto a los clubes grandes de Argentina.</p>
+            <button class="mas-informacion-act">Más información...</button>
+        </div>
+        <div class="actividad">
+          <h3>Futbol mayor</h3>
+          <img src="../img-web/niños-team.jpg" alt="imagen nenes">
+          <p>En Giles un barrio está de fiesta. Villa Manchi consiguió un destacado logro el pasado domingo, que ya tiene su lugar en las páginas doradas del club. En su temporada debut en la Liga Mercedina se coronó campeón de la Segunda División para lograr así el ascenso a la categoría mayor.
+
+            La última fecha de la temporada midió a la Villa con Jorge Newbery, el único equipo con chances matemáticas de arrebatarle el título a los de Giles. La victoria, el empate y hasta una derrota por la mínima coronaban a la institución local.</p>
+          <button class="mas-informacion-act">Más información...</button>
+      </div>
+    </section>  
+    <section id="profesores">
+      <h2>Profesores de nuestra institucion</h2>
+      <div class="profes-container">
+          <div class="profe">
+              <img src="../img-web/profes-vm/pitu-profe.png" alt="pitu-profe">
+              <h3>Alexis Roldan</h3>
+              <p>Cargo o descripción breve del Socio 1.</p>
+          </div>
+          <div class="profe">
+              <img src="../img-web/profes-vm/pitu-profe.png" alt="pitu-profe">
+              <h3>Santiago Crosetti</h3>
+              <p>Prof. Escuelita de Futbol</p>
+          </div>
+          <div class="profe">
+            <img src="../img-web/profes-vm/pitu-profe.png" alt="pitu-profe">
+            <h3>Alejandro Aubain</h3>
+            <p>Director Tecnico</p>
+        </div>
+        <div class="profe">
+          <img src="../img-web/profes-vm/pitu-profe.png" alt="pitu-profe">
+          <h3>Maxi Levo</h3>
+          <p>Kinesiologo</p>
+      </div>
+      <div class="profe">
+        <img src="../img-web/profes-vm/pitu-profe.png" alt="pitu-profe">
+        <h3>Simon Domancich</h3>
+        <p>Preparador Fisico</p>
+    </div>
+    <div class="profe">
+      <img src="../img-web/profes-vm/pitu-profe.png" alt="pitu-profe">
+      <h3>Mauro Rondon</h3>
+      <p>Ayudante de campo</p>
+  </div>
+      </div>
+  </section>
     </main>
 
     <footer class="footer">
