--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -48,6 +48,32 @@
        
     </header>
     <main>
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../img-web/iconos-web/costanzo-portada.jpg" class="d-block w-100" alt="sponsor costanzo">
+          </div>
+          <div class="carousel-item">
+            <img src="../img-web/iconos-web/nikeanuncio.png" class="d-block w-100" alt="nike sponsor">
+          </div>
+          <div class="carousel-item">
+            <img src="../img-web/iconos-web/info-logo.jpg" class="d-block w-100" alt="giles ciudad">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
       <div>
         <h1 class="Titulo-principal-tienda">Nuestra indumentaria: </h1> 
         <p  class="descripcion-ropa">La tecnología aplicada a la ropa deportiva, suele arrojar resultados más allá de la facilidad de movimientos para libre ejercitación, dispone una serie de campos medibles a través de múltiples sensores.
@@ -63,7 +89,7 @@
 
       <section>
               <h3 class="titulo-secciones">Camiseta oficial</h3>
-                  <div class="producto-grid">
+                  <div class="grid-container-tienda">
                     <div class="producto">
                         <img src="../img-web/indumentaria-vm/camiseta-juegofrente.jpg" alt="remera juego" class="producto-img">
                           <div class="Prenda">
@@ -132,7 +158,7 @@
       </section>
       <section>
               <h3 class="titulo-secciones">Conjunto de entrenamiento</h3>
-                <div class="producto-grid">
+                <div class="grid-container-tienda">
                     <div class="producto">
                       <img src="../img-web/indumentaria-vm/ropa-entrenamientofrente.jpg" alt="Producto 1" class="producto-img2">
                       <div class="Prenda">
@@ -201,7 +227,7 @@
       </section>
       <section>
               <h3 class="titulo-secciones">Campera rompevientos</h3>
-                <div class="producto-grid">
+                <div class="grid-container-tienda">
                   <div class="producto">
                     <img src="../img-web/indumentaria-vm/Campera-vm.jpg" alt="Producto 1" class="producto-img">
                     <div class="Prenda">
