Lista para subir a internet

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -77,7 +77,7 @@
       
         <h2 class="titulo-contacto">Redes:</h2>
         <div class="contacto-redes">
-          <div class="contacto-redes" >
+          <div class="contacto-redes" id="whatsappicon" >
             <img src="../img-web/iconos-web/whatsapp.png" alt="whatsapp">
             <a href="https://web.whatsapp.com/">2325-653017</a>
           </div>
