--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esta pagina esta creada con el fin de que el club de barrio (villa manchi) tenga relevancia en el mundo del internet, a su vez poder impactar fuerte en el algoritmo dee las personas apasionadas por los clubes de futbol">
+    <meta name="keywords" content="club, barrio, futbol, hockey, balon, deporte, deportista, actividades fisicas, partido, campeon, fixture, federal, liga, semillero, director tecnico, socios ">
+    <meta name="author" content="Santiago Crosetti">
+    <meta name="whatsapp" content="2325653017">
+    <meta name="geo.place" content="Argentina">
+
     <title>VillaManchi-Inicio</title>
     <link rel="shortcut icon" href="./img-web/iconos-web/Escudo-CAVM-white.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
